--- a/templates/purchasing/pickList.html
+++ b/templates/purchasing/pickList.html
@@ -83,7 +83,7 @@
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'purchaseDetail' %}">구매내역</a>
 
                 {% if bdto.user_grade_id == 1 %}
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="myReceiveCode">수령 코드 확인</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/user/myReceiveCode">수령 코드 확인</a>
                 {% endif %}
                 {% if bdto.user_grade_id == 2 %}
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="../store/mypage">점주 페이지</a>
