--- a/templates/search/searchByCategory.html
+++ b/templates/search/searchByCategory.html
@@ -8,65 +8,94 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-<link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+		<link
+	      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+	      rel="stylesheet"
+	      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+	      crossorigin="anonymous"
+		    />
 		<title> Wining </title>
 		<script src="{% static 'js/jquery-3.6.4.js' %}"></script>
 		<script src="https://code.jquery.com/ui/3.6.4/jquery-ui.js"></script>
-		<!-- ♠ bootstrap 적용 -->
+		<style>
+		
+		.inputbutton {
+		    background-color: #4CAF50;
+		    border: none;
+		    color: white;
+		    text-align: center;
+		    text-decoration: none;
+		    display: inline-block;
+		    font-size: 16px;
+		    border-radius: 5px;
+		    padding: 10px 24px;
+		    transition: background-color 0.3s, transform 0.2s;
+		    cursor: pointer;
+		}
+		
+		.inputbutton:hover {
+		    background-color: #45a049;
+		    transform: scale(1.05);
+		}
+		
+		</style>
 	</head>
+	
 	<body> 
+		<div class="container">
 		{% block title %} 
 			<h2 align="center"> Wining </h2> 
 		{% endblock %}
 		<br><br>						
 		{% block select %}								<!-- 검색 방법 선택 -->
-		
-		
+
 		{% endblock %}
 		<br><br>
 		{% block input %}
-			{% csrf_token %}
-<!--  
-<input type="checkbox" name="name1" id="c0" value="value0" checked="checked" onClick="example_0();">			
-<input type="checkbox" name="name1" id="c1" value="value1" onClick="example_1();">
-<input type="checkbox" name="name1" id="c2" value="value2" onClick="example_1();">
-<input type="checkbox" name="name1" id="c3" value="value3" onClick="example_1();">
-<input type="checkbox" name="name1" id="c4" value="value4" onClick="example_1();">
-<input type="checkbox" name="name1" id="c5" value="value5" onClick="example_1();">
-<input type="checkbox" name="name1" id="c6" value="value6" onClick="example_1();">
--->
-
-
-			
+<div class="container">
+    <div class="row justify-content-center">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="text-center">sorted by Category.</h3>
+                </div>
+                
+ 				<div class="card-body">			
+ 				
+ 				{% csrf_token %}
+		
 			<form method="post" action="searchbycategorylist" name="searchbycategory">
-				<div style="margin: 0 auto; text-align:center"> 
+				
+				<label for="inputName" class="highlight-label">1. 와인 종류를 고르세요 </label> 
 					<div style="width:60%; margin: 0 auto;"> 
-						 와인 종류 <br>
+						<br>
 						<input type="checkbox" name="winekind" id="k0" value="0" checked="checked" onClick="default_k_check();">
         				<label for="red">선택 없음</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        				
         				<input type="checkbox" name="winekind" id="k1" value="1" onClick="select_k_check();">
         				<label for="red">레드</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        				
         				<input type="checkbox" name="winekind" id="k2" value="2" onClick="select_k_check();">
         				<label for="purple">화이트</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        				
         				<input type="checkbox" name="winekind" id="k3" value="3" onClick="select_k_check();">
         				<label for="black">로제</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        				
         				<input type="checkbox" name="winekind" id="k4" value="4" onClick="select_k_check();">
         				<label for="black">스파클링</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        				
         				<input type="checkbox" name="winekind" id="k5" value="5" onClick="select_k_check();">
         				<label for="black">주정강화</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 
 
-	
+		  
+		  
+		  	
 					
 					<br>
+					<label for="inputName" class="highlight-label">2. 와인 용량을 고르세요 </label> 
 					<div style="width:60%; margin: 0 auto;"> 
-						 와인 용량 <br>
+						<br>
 						<input type="checkbox" name="winecapacity" id="c0" value="1" checked="checked" onClick="default_c_check();">
         				<label for="red">선택 없음</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         				<input type="checkbox" name="winecapacity" id="c1" value="750" onClick="select_c_check();">
@@ -75,8 +104,9 @@
         				<label for="purple">not 750</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<br>
+					<label for="inputName" class="highlight-label">3. 와인 도수를 고르세요 </label> 
 					<div style="width:60%; margin: 0 auto;"> 
-						 와인 도수 <br>  
+						<br>  
 						<input type="number" name="alcmin" id="alcmin" value="0" min="0" max="25">
         				
         				~
@@ -85,57 +115,11 @@
         				
 					</div>
 					<br>
-			<!--  
-					<script>
-        $(function() {
-            $("#slider-range-max").slider({
-                range: "max",
-                min: 1,
-                max: 10,
-                value: 2,
-                slide: function(event, ui) {
-                    $("#amount").val(ui.value);
-                }
-            });
-            $("#amount").val($("#slider-range-max").slider("value"));
- 
- 
-            $("#slider-range").slider({
-                range: true,
-                min: 0,
-                max: 500,
-                values: [75, 300],
-                slide: function(event, ui) {
-                    $("#amount2").val("$" + ui.values[0] + " - $" + ui.values[1]);
-                }
-            });
-            $("#amount2").val("$" + $("#slider-range").slider("values", 0) + " - $" + $("#slider-range").slider("values", 1));
- 
-        });
-    </script>	
-				
- 
-    <p>
-        <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
-    <div id="slider-range-max"></div>
- 
-    <p>
-        <input type="text" id="amount2" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
-    <div id="slider-range"></div>
- 
-    <p>
-        <input type="text" id="amount3" readonly style="border:0; color:#f6931f; font-weight:bold;">
-    </p>
-    <div id="slider"></div>
-
-  	-->
 
 					
-					
-					<div style="width:60%; margin: 0 auto; text-align: center;"> 
-						 당도 <br>
+					<label for="inputName" class="highlight-label">4. 원하는 당도를 고르세요 </label> 
+					<div style="width:60%; margin: 0 auto;"> 
+						<br>
 						<input type="checkbox" name="dangdo" id="d0" value="0" checked="checked" onClick="default_d_check();">
         				<label for="red">선택 없음</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         				<input type="checkbox" name="dangdo" id="d1" value="1" onClick="select_d_check();">
@@ -150,8 +134,9 @@
         				<label for="black">5</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<br>
-					<div style="width:60%; margin: 0 auto; text-align: center;"> 
-						 산도 <br>
+					<label for="inputName" class="highlight-label">5. 원하는 산도를 고르세요 </label> 
+					<div style="width:60%; margin: 0 auto;"> 
+						<br>
 						<input type="checkbox" name="sando" id="s0" value="0" checked="checked" onClick="default_s_check();">
         				<label for="red">선택 없음</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         				<input type="checkbox" name="sando" id="s1" value="1" onClick="select_s_check();">
@@ -166,8 +151,9 @@
         				<label for="black">5</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<br>
-					<div style="width:60%; margin: 0 auto; text-align: center;"> 
-						 탄닌 <br>
+					<label for="inputName" class="highlight-label">6. 원하는 탄닌을 고르세요 </label> 
+					<div style="width:60%; margin: 0 auto;"> 
+						<br>
 						<input type="checkbox" name="tannin" id="t0" value="0" checked="checked" onClick="default_t_check();">
         				<label for="red">선택 없음</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         				<input type="checkbox" name="tannin" id="t1" value="1" onClick="select_t_check();">
@@ -182,8 +168,9 @@
         				<label for="black">5</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<br>
-					<div style="width:60%; margin: 0 auto; text-align: center;"> 
-						 추천 음식 <br>
+					<label for="inputName" class="highlight-label">7. 와인과 페어링하고 싶은 음식을 고르세요 </label> 
+					<div style="width:60%; margin: 0 auto;"> 
+						<br>
 						<input type="checkbox" name="winefood" id="f0" value="0" checked="checked" onClick="default_f_check();">
         				<label for="red">선택 없음</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         				<input type="checkbox" name="winefood" id="f1" value="1" onClick="select_f_check();">
@@ -198,15 +185,11 @@
         				<label for="black">해산물</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<br>
-					<!--  
-					<input type="checkbox" name="category[]" id="category" value="{{ ct.id }}"> {{ ct.name }}
-					-->
-					
-
 					
 					
-					<div style="width:60%; margin: 0 auto; text-align: center;"> 
-						 지역 <br>
+					<label for="inputName" class="highlight-label">8. 와인의 원산지를 고르세요 </label> 
+					<div style="width:60%; margin: 0 auto;"> 
+						<br>
 						<input type="checkbox" name="wineregion" id="r0" value="0" checked="checked" onClick="default_r_check();">
         				<label for="red">선택 없음</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         				<input type="checkbox" name="wineregion" id="r1" value="1" onClick="select_r_check();">
@@ -225,14 +208,44 @@
 					<br>
 							
 				</div>
-									
+								
 	<script src="{% static 'js/searchByCategory.js' %}" ></script>
-	<script src="{% static 'js/script_search.js' %}" ></script>
-	<br><br>
-			<div style="text-align: center;">
-				<input class="inputbutton" type="submit" value="검색" style="display :inline-block; padding: 10px 30px;">
-			</div>
-			</form>
+	<script src="{% static 'js/script_search.js' %}" ></script><br><br>
+	
+				<div style="text-align: center;">
+					<input class="inputbutton" type="submit" value="검색">
+				</div><br>
+				</div>
+				</div>
+				</div>
+
+				
+<style>					
+.inputbutton {
+    background-color: #3498db;
+    border: none;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.2s;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.inputbutton:hover {
+    background-color: #2980b9;
+    transform: translateY(-2px);
+}
+		
+</style>	
+				
+				
+				
+			</form>	
 		{% endblock %}
 
 
@@ -240,6 +253,7 @@
 		{% block list %}
 		
 		{% endblock %}
-
+		</div>
 	</body>
 </html>
+
