--- a/templates/search/searchByNameList.html
+++ b/templates/search/searchByNameList.html
@@ -4,7 +4,6 @@
 {% load static %}
 
 
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -115,40 +114,81 @@
 										<!-- 전체 결과 수 출력 -->
 		
 		<div align="center" style="margin: 0 auto;">
-		<div>	
-		{% if results_count == 0 %}										<!-- 검색 결과 유무에 따라 나눈다 -->
-				검색 결과가 없습니다
-		{% else %}
-				<h3>'{{ search_word }}' 에 대한 검색 결과</h3>
-		</div>
-		<div>
-			<h3> 전체 결과 수 : {{ results_count }}	</h3>
-		</div>
+			<div>	
+				{% if results_count == 0 %}										<!-- 검색 결과 유무에 따라 나눈다 -->
+					검색 결과가 없습니다
+				{% else %}
+				<!-- <h3>'{{ search_word }}' 에 대한 검색 결과</h3>-->
+				<h3>검색 조건에 해당하는 WINE,<span style="color:red;"> &nbsp;{{ results_count }} </span>개를 보여드리겠습니다.</h3>
+			</div>
 		</div>
 			<br><br>
 			<input type="hidden" id="searchstart" value="{{search_word}}">
 			
+			
+<div class="photo-board">
 			{% for start_result in start_results %}								<!-- 검색 결과가 있다면 반복문으로 나타낸다 -->
 
 				
-				<div class="list_outline_start" style=" width:60%; height: 240px; border: 5px solid rgb(170, 0, 4); 
-					border-radius: 1em; padding: 3px 3px 3px 3px; margin: 0 auto;">	    	
+				<div class="photo-item">	    	
 				 	<a href="/detail/winedetail?wine_id={{ start_result.wine_id }}">
-				 		<div class="list_image" style="float: left;">
-				 			<img src="../{{ start_result.wine_image.url }}" width="150" height="200"> 
-				 		</div>
-							<div class="list_name" id="{start_result.wine_id}}" style="font-size: x-large; font-color:black;">
-								{{ start_result.wine_name }}
-							</div>
-							<div class="list_name_eng" style="font-size: large; padding: 5px 5px 5px 5px; font-color:black;"> 
-								{{ start_result.wine_name_eng }} 
-							</div>
-						</a>
-					</div>
+						<img class="photo-image" src="../{{ start_result.wine_image.url }}"> 
+						<div class="photo-name">{{ start_result.wine_name }}</div>
+						<div class="photo-name-eng">{{ start_result.wine_name_eng }} </div>
+					</a>
+				</div>
 					
 				<br><br>
 			{% endfor %}
-			
+</div>
+<style>
+
+
+
+.photo-board {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    
+    margin-top: 30px;
+}
+
+.photo-item {
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    width: calc(14% - 20px); /* 5개씩 배치하므로 너비 조절 */
+    margin-left: 140px; /* 왼쪽 공백 추가 */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.photo-item:hover {
+    transform: translateY(-3px);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.photo-image {
+    width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.photo-name {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.photo-name-eng {
+    color: #666;
+}
+</style>	
+
+	
 			{% for post in page_obj %}
 				<li> {{ post.title }}</li>
 			{% endfor %}
@@ -220,34 +260,17 @@
 
 <script>
 
-import { createApp } from "https://unpkg.com/vue@3.2.6/dist/vue.esm-browser.min.js";
-
-const app = createApp({
-  data() {
-    return {
-      responseData: [], // 서버에서 받아올 데이터
-    };
-  },
-});
-
-app.mount("#searchResults");
+	import { createApp } from "https://unpkg.com/vue@3.2.6/dist/vue.esm-browser.min.js";
+	
+	const app = createApp({
+	  data() {
+	    return {
+	      responseData: [], // 서버에서 받아올 데이터
+	    };
+	  },
+	});
+	
+	app.mount("#searchResults");
 
 
 </script>
-
-
-
-<!--  
-{% for dto_res in sorted_wine_id %}								
-
-	
-				<a href="../detail/winedetail?wine_id={{i}}">
-					<div align="center" style="width:60%; height: 100px; border: 5px solid red; border-radius: 2em;">													
-				 		<div align="left" ><img src="{{ list_wine_image.i }}" width="50" height="50"> </div>
-						<div style="text-align:left"> {{list_wine_name.i }} </div>
-					</div>
-				</a>
-				<br><br>
-			{% endfor %}
-			
--->
