--- a/templates/store/searchReceiveCode.html
+++ b/templates/store/searchReceiveCode.html
@@ -1,57 +1,97 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Wining</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Wining - 수령 코드 검색</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="/static/js/storeReceiveCodeScript.js" defer></script>
-  </head>
-  <body>
-    <div class="row" style="text-align: center">
-      <div class="col">
-        {{result}}
-        <br />
-        {{result2}}수령 코드를 검색해주세요
-      </div>
-    </div>
-    <div class="row" style="text-align: center">
-      <div class="col">
-        <input type="text" id="searchReceiveCode" />
-        <input type="button" id="btnSearch" value="코드 검색" />
-      </div>
-      <div class="row" style="text-align: center">
-        <div class="col">
-          <input
-            type="submit"
-            id="btnReceive"
-            value="수령 확인"
-            form="idForm"
-            disabled
-          />
-          <input
-            type="button"
-            value="뒤로가기"
-            onclick="location='../mypage'"
-          />
+    <style>
+        body {
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            padding: 20px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        h1 {
+            font-size: 32px;
+            text-align: center;
+            margin-bottom: 20px;
+            color: #343a40;
+        }
+
+        .row {
+            margin-bottom: 15px;
+        }
+
+        .col {
+            text-align: center;
+        }
+
+        #searchReceiveCode {
+            width: 200px;
+            padding: 10px;
+            border: 1px solid #ced4da;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        #btnSearch, #btnReceive, #btnBack {
+            padding: 10px 20px;
+            background-color: #007bff;
+            border: none;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #btnSearch:hover, #btnReceive:hover, #btnBack:hover {
+            background-color: #0056b3;
+        }
+
+        #btnReceive[disabled] {
+            background-color: #e9ecef;
+            cursor: not-allowed;
+        }
+
+        #codeInfo {
+            font-weight: bold;
+            color: #6c757d;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>수령 코드 검색</h1>
+        <div class="row">
+            <div class="col">
+                {{result}}<br>
+                {{result2}}수령 코드를 검색해주세요
+            </div>
         </div>
-      </div>
-      <div id="codeInfo" class="row"></div>
-      {% csrf_token %}
-      <form id="idForm" method="post" action="receive-code"></form>
+        <div class="row">
+            <div class="col">
+                <input type="text" id="searchReceiveCode" placeholder="수령 코드를 입력해주세요">
+                <input type="button" id="btnSearch" value="코드 검색">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="submit" id="btnReceive" value="수령 확인" form="idForm" disabled>
+                <input type="button" id="btnBack" value="뒤로가기" onclick="location='../mypage'">
+            </div>
+        </div>
+        <div id="codeInfo" class="row"></div>
+        <form id="idForm" method="post" action="receive-code"></form>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</body>
 </html>
