--- a/templates/store/storeMyPage.html
+++ b/templates/store/storeMyPage.html
@@ -27,7 +27,7 @@
 	 <div class="border-start border-end bg-white" id="sidebar-wrapper" style="width:300px;">
          <div class="sidebar-heading border-bottom bg-light" align="center"><b>MyPage</b></div>
                <div class="list-group list-group-flush">
-                   <a class="list-group-item list-group-item-action list-group-item-light p-3" href="info">점주정보수정</a>
+                   <a class="list-group-item list-group-item-action list-group-item-light p-3" href="info/modification">점주정보수정</a>
                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="search/receive-code">수령코드 검색</a>
                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="sell/histories/pages/1">판매 내역</a>
                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="sell/merchandises/pages/1">판매 중인 주류</a>
@@ -49,7 +49,7 @@
 
     <div class="container">
         <div class="profile-header text-center">
-            <h3><b>WINE SELLER INFO.</b></h3>
+            <h3><b>WINE SELLERs' INFO.</b></h3>
         </div>
 
         <div class="profile-section">
@@ -109,6 +109,8 @@
             </div>
         </div>
     </div>
+ </div>
+ <div class="row">
     <div class="col-xl-3 col-md-6">
         <div class="card bg-success text-white mb-4">
             <div class="card-body">판매 중 인 주류</div>
@@ -119,28 +121,10 @@
         </div>
     </div>
     <div class="col-xl-3 col-md-6">
-        <div class="card bg-success text-white mb-4">
+        <div class="card bg-secondary text-white mb-4">
             <div class="card-body">매출 정보</div>
             <div class="card-footer d-flex align-items-center justify-content-between">
                 <a class="small text-white stretched-link" href="revenue/pages/1">더보기 > </a>
-                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-3 col-md-6">
-        <div class="card bg-secondary text-white mb-4">
-            <div class="card-body">통계정보</div>
-            <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="sell/merchandises/pages/1">더보기 > </a>
-                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-3 col-md-6">
-        <div class="card bg-success text-white mb-4">
-            <div class="card-body">점주 페이지</div>
-            <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="../store/mypage">더보기 > </a>
                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
             </div>
         </div>
@@ -154,137 +138,7 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
         
-        <br><br><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--
-    <div class="container">
-    
-        <h1 class="text-center">판매 내역</h1>
-
-        <table class="sales-table">
-            <thead>
-                <tr>
-                    <th>판매 번호</th>
-                    <th>제품명</th>
-                    <th>판매 수량</th>
-                    <th>판매 금액</th>
-                    <th>수령 여부</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for info in list %}
-                <tr>
-                    <td class="text-center">{{info.sellPurchaseDetail__purchase_detail_id}}</td>
-                    <td>{{info.wine__wine_name}}</td>
-                    <td class="text-center">{{info.sellPurchaseDetail__purchase_det_number}}</td>
-                    <td class="text-center">{{info.sellPurchaseDetail__purchase_det_price}}</td>
-                    <td class="text-center status {% if info.sellPurchaseDetail__purchase_det_state == 1 %}pending{% endif %}{% if info.sellPurchaseDetail__purchase_det_state == 2 %}received{% endif %}">
-                        {% if info.sellPurchaseDetail__purchase_det_state == 1 %}
-                        미수령
-                        {% endif %}
-                        {% if info.sellPurchaseDetail__purchase_det_state == 2 %}
-                        수령
-                        {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-           </tbody>
-      </table>
-               
-	
-	
-	
-	<div id="pages" class="row">
-		<nav >
-			<ul class="pagination">
-				{% with  start=pages_count.0 %}
-				{% if start < 6 %}
-				<li id="prev" class="page-item disabled">
-					<a class="page-link prev" name="pages">Previous</a>
-				</li>
-				{% endif %}
-				{% if start >= 6 %}
-				<li id="prev" class="page-item">
-					<a class="page-link prev" name="pages" href={{i|add:-1}}>Previous</a>
-				</li>
-				{% endif %}
-				{% endwith %}
-				{% for i in pages_count %}
-					<li class="page-item page-num-list">
-						<a id="{{i}}" class="page-link page-num" name="pages" href={{i}}>{{i}}</a>
-					</li>
-				{% endfor %}
-				{% with  end=pages_count|last %}
-				{% if end < 6 %}
-				<li id="next" class="page-item disabled">
-					<a id="{{next}}" class="page-link next" name="pages">Next</a>
-				</li>
-				{% endif %}
-				{% if end >= 6 %}
-				<li id="next" class="page-item disabled">
-					<a id="{{next}}" class="page-link next" name="pages"href={{i|add:1}}>Next</a>
-				</li>
-				{% endif %}
-				{% endwith %}
-			</ul>
-		</nav>
-	</div>
-
-</div>
--->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="row">
-        <div class="col">
-            <input type="button" id="btnSearchReceiveCode" value="수령 코드 검색 하기" onclick="location='search/receive-code'">
-        </div>
-    </div><br>
-    <div class="row">
-        <div class="col">
-        	<input type="button" id="btnStoreInfo" value="회원 정보 보기 - 완료" onclick="location='info'"><br><br>
-        	<input type="button" id="btnSellList" value="판매 내역 보기 - 완료" onclick="location='sell/histories/pages/1'"><br><br>
-            <input type="button" id="btnProductList" value="판매 주류 보기" onclick="location='sell/merchandises/pages/1'"><br><br>
-            <input type="button" id="btnStoreStatistics" value="통계 정보 보기" onclick="location='sell/merchandises/pages/1'"><br><br>
-            <input type="button" id="btnStoreRevenue" value="매출 정보 보기" onclick="location='revenue/pages/1'">
-        </div>
-    </div>
-	<br><br>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+        <br><br><br><br><br>
 </body>
 
 
