user html 부분 일부수정

--- a/templates/user/delete.html
+++ b/templates/user/delete.html
@@ -51,10 +51,10 @@
 	                   <a class="list-group-item list-group-item-action list-group-item-light p-3" href="purchaseDetail">구매내역</a>
 	
 		                {% if ddto.user_grade_id == 1 %}
-		                <a class="nav-link" href="myReceiveCode">수령 코드 확인</a>
+		                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="myReceiveCode">수령 코드 확인</a>
 		                {% endif %}
 		                {% if ddto.user_grade_id == 2 %}
-		                <a class="nav-link" href="../store/mypage">점주 페이지</a>
+		                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="../store/mypage">점주 페이지</a>
 		                {% endif %}
 	               </div>
 	    </div>
