--- a/templates/user/purchaseDetail.html
+++ b/templates/user/purchaseDetail.html
@@ -47,7 +47,7 @@
 	<div class="row justify-content-center">
 		<div class="col-md-10">
 			<br><h2>내가 구매한 Product.</h2>
-           	<h5><br>총 {{purchase_c}} 개의 상품을 주문했습니다</h5>
+           	<h5><br>총 {{dtos|length}} 개의 상품을 주문했습니다</h5>
 			<table class="table">
 				<thead>
                		<tr>
