--- a/templates/user/myPage.html
+++ b/templates/user/myPage.html
@@ -81,7 +81,7 @@
  
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-warning text-white mb-4">
-                                    <div class="card-body">주문내역 {{purchase_c}}</div>
+                                    <div class="card-body">주문내역</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="purchaseDetail">더보기 > </a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -93,7 +93,7 @@
                       
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">나의 리뷰 {{review_c}}</div>
+                                    <div class="card-body">나의 리뷰</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="reviewList">더보기 > </a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-danger text-white mb-4">
-                                    <div class="card-body">장바구니 {{cart_c}}</div>
+                                    <div class="card-body">장바구니</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="../purchasing/cart">더보기 > </a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
